--- a/src/main/resources/templates/account/userInfo-edit.html
+++ b/src/main/resources/templates/account/userInfo-edit.html
@@ -138,7 +138,7 @@
 					</div>
 				</div>
 			<div class="d-flex justify-content-center">
-				<button type="button" class="btn logo-color">확인</button>
+				<button type="button" class="btn btn-success">확인</button>
 			</div>
 			
 			
