[배지현] - 회원정보 수정 페이지 1차 완료 - 세부사항 다듬기 - 임시 비밀번호 작동 확인 완료 #12

--- a/src/main/resources/templates/account/findUser.html
+++ b/src/main/resources/templates/account/findUser.html
@@ -58,9 +58,10 @@
 				</div>
 	
 				<div>
-					<button type="button" class="btn btn-lgn btn-outline-secondary my-2" id="newSetPwBtn">비밀번호 재설정</button>
+					<button type="button" class="btn btn-lgn btn-outline-secondary my-2" id="newSetPwBtn">임시 비밀번호 발급 받기</button>
+					<!--  버튼 누르면 인풋창 show -->
 						<div id="updatePw" class="d-none">
-							<h5 class="font-weight-bold mt-4">새로운 비밀번호를 설정해주세요</h5>
+							<h5 class="font-weight-bold my-4">임시 비밀번호 발급을 위한 정보를 입력해주세요</h5>
 							<div>
 								<input type="text" class="form-control my-2" placeholder="이름">
 							</div>
@@ -68,16 +69,10 @@
 								<input type="text" class="form-control my-2" placeholder="아이디">
 							</div>
 							<div>
-								<input type="text" class="form-control my-2" placeholder="휴대폰 번호">
+								<input type="text" class="form-control my-2" placeholder="이메일주소">
 							</div>
 							<div>
-								<input type="password" placeholder="비밀번호" id="newPwInput" class="form-control my-2">
-							</div>
-							<div>
-								<input type="password" placeholder="비밀번호 확인" id="newPwConfirmInput" class="form-control my-2">
-							</div>
-							<div>
-								<button type="button" class="btn btn-success mb-4" id="setPwBtn">설정</button>
+								<button type="button" class="btn btn-success mb-4" id="setPwBtn">확인</button>
 							</div>
 						</div>
 				</div>
