--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -35,7 +35,7 @@
 					</div>
 					
 					<div class="col-9">
-					<textarea class="border-0 w-100" rows="10" > <!--  이용약관 -->
+					<textarea class="border-0 w-100" rows="10" > 
 					제 1 장 총칙
 제 1 조 (목적)
 본 약관은 (주)누누북스(이하 “회사”라 합니다)가 운영하는 웹사이트 ‘누누북스’(이하 “웹사이트”라 합니다)에서 제공하는 온라인 서비스(이하 “서비스”라 한다)를 이용함에 있어 사이버몰과 이용자의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.
