--- a/src/main/resources/templates/account/userInfo-edit.html
+++ b/src/main/resources/templates/account/userInfo-edit.html
@@ -59,12 +59,12 @@
 								 <th>
 								 이메일
 								 </th>
-								 <td>
+								 <td id="userEmail">
 									 <div>
 										  <span th:text="${user.email}">abc@aaa.com </span>
 									 </div>
 								 </td>
-									<td class="d-none">
+									<td class="d-none" id="changeEmail">
 									<div class="d-flex align-items-center">
 										<input type="text" class="form-control" id="emailInput">
 										<span>@</span>
@@ -82,7 +82,7 @@
 									</td>
 									<td>
 									<div>
-										<button type="button" class="btn btn-outline-secondary ml-4">변경</button>
+										<button type="button" class="btn btn-outline-secondary ml-4" id="emailBtn">변경</button>
 									</div>
 								</td>
 							</tr>
@@ -107,13 +107,13 @@
 								 <th>
 								 주소
 								 </th>
-								<td>
+								<td id="userAdr">
 									<div>
 										<div th:text="|(${user.postcode})|">00000</div>
 										<div th:text="${user.address}">뫄뫄시 롸롸동 솨솨아파트</div>
 									</div>
 								</td>
-								<td class="d-none">
+								<td class="d-none" id="changeAdr">
 									<div class="d-flex">
 									<input type="text" class="form-control w-25" id="postcode"> <!-- 다음 주소 api 활용 -->
 									<button type="button" class="btn btn-outline-secondary w-25 ml-2" id="postCodeBtn">우편번호 찾기</button>
@@ -123,7 +123,7 @@
 								</td>
 								 <td>
 									<div>
-										<button type="button" class="btn btn-outline-secondary ml-4">변경</button>
+										<button type="button" class="btn btn-outline-secondary ml-4" id="addressBtn">변경</button>
 									</div>
 								</td>
 							</tr>
@@ -131,12 +131,12 @@
 								 <th>
 								 휴대전화
 								 </th>
-								 <td>
+								 <td id="userPhone">
 									<div>
 										<span th:text="${user.phoneNumber}">010-1111-1111</span>
 									</div>
 								</td>
-								<td class="d-none">
+								<td class="d-none" id="changePhone">
 									<div class="d-flex align-items-center justfiy-content-between">
 										<input type="text" class="form-control" id="phoneInput1">
 										<span> - </span>
@@ -147,7 +147,7 @@
 								</td>
 								 <td>
 									<div>
-										<button type="button" class="btn btn-outline-secondary ml-4">변경</button>
+										<button type="button" class="btn btn-outline-secondary ml-4" id="phoneBtn">변경</button>
 									</div>
 								</td>
 							</tr>
@@ -170,6 +170,129 @@
 	
 	$(document).ready(function(){
 
+		
+		let emailId = $("#emailInput").val();
+		
+		let postcode = $("#postcode").val();
+		let addr = $("#addr").val();
+		let detailAddr = $("#detailAddr").val();
+		
+		let phoneNumber1 = $("#phoneInput1").val();
+		let phoneNumber2 = $("#phoneInput2").val();
+		let phoneNumber3 = $("#phoneInput3").val();
+		
+		let domain = "@" + $("#domainSel").val();
+		if ($("#domainSel").val() === "self-domain") {
+			let selfFill = $("#fillEmail").val();
+			if(selfFill.trim() === ""){
+				 alert("이메일을 직접 입력해 주세요.");
+				 return;
+			}
+			
+		    domain = "@" +selfFill;
+		}
+		
+		let email = emailId + domain;
+
+		let phoneNumber = phoneNumber1 + "-" + phoneNumber2 + "-" + phoneNumber3;
+		let address = addr+ " " + detailAddr;
+		
+		
+		
+		
+		
+		$("#emailBtn").on("click",function(){
+
+			$("#userEmail").addClass("d-none");
+			$("#changeEmail").removeClass("d-none")
+		});
+		
+		$("#addressBtn").on("click",function(){
+
+			$("#userAdr").addClass("d-none");
+			$("#changeAdr").removeClass("d-none")
+		});
+		
+		$("#phoneBtn").on("click",function(){
+
+			$("#userPhone").addClass("d-none");
+			$("#changePhone").removeClass("d-none")
+		});
+		
+		 $("#domainSel").on("change",function(){
+             // alert();
+            let select = $(this).val();
+           
+             if(select == "self-domain") {
+                 $("#fillEmail").removeClass("d-none");      
+                 $("#domainSel").addClass("d-none");
+                 select = $("#fillEmail").val();
+             }
+
+             
+         });
+
+		 
+		 
+		 $("#postCodeBtn").on("click",function(){
+
+				
+				new daum.Postcode({
+
+		            oncomplete: function(data) {
+		                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+		                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+		                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+		                var addr = ''; // 주소 변수
+		                var extraAddr = ''; // 참고항목 변수
+
+		                //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+		                if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+		                    addr = data.roadAddress;
+		                } else { // 사용자가 지번 주소를 선택했을 경우(J)
+		                    addr = data.jibunAddress;
+		                }
+
+		                
+		                // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+		                if(data.userSelectedType === 'R'){
+		                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+		                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+		                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+		                        extraAddr += data.bname;
+		                    }
+		                    // 건물명이 있고, 공동주택일 경우 추가한다.
+		                    if(data.buildingName !== '' && data.apartment === 'Y'){
+		                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+		                    }
+		                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+		                    if(extraAddr !== ''){
+		                        extraAddr = ' (' + extraAddr + ')';
+		                    } 
+		                } else {
+		                        document.getElementById("address").value = '';
+		                }
+		                    
+		                    
+		                // 우편번호와 주소 정보를 input 박스에 넣는다.
+		                document.getElementById('postcode').value = data.zonecode;
+		                document.getElementById("addr").value = addr;
+		                document.getElementById("addr").value += extraAddr;
+		                // 커서를 상세주소 필드로 이동한다.
+		                document.getElementById("detailAddr").focus();
+		            } 
+				// 자바문법 위랑 통일 시키기 
+		        
+				
+				
+		        }).open();
+				
+			
+			});
+		 
+		 
+		
 		// 비밀번호 변경
 		// 비밀번호를 변경하는게 우선된 로직
 		$("#editBtn").on("click",function(){
