--- a/src/main/resources/templates/order/order-info.html
+++ b/src/main/resources/templates/order/order-info.html
@@ -142,6 +142,12 @@
 
 
 	<script layout:fragment="script">
+	
+	//	https://portone.gitbook.io/docs/api/api-1/api
+	//	결제 취소, 취소사유 ++ 
+	//	POST https://api.iamport.kr/payments/cancel
+	//	https://portone.gitbook.io/docs/auth/guide-2
+	
 	</script>
 
 </html>
