--- a/src/main/resources/templates/order/order-info.html
+++ b/src/main/resources/templates/order/order-info.html
@@ -148,6 +148,76 @@
 	//	POST https://api.iamport.kr/payments/cancel
 	//	https://portone.gitbook.io/docs/auth/guide-2
 	
-	</script>
+	 function cancelPay() {
+    jQuery.ajax({
+      // 예: http://www.myservice.com/payments/cancel
+      url: "https://api.iamport.kr/payments/cancel" 
+      ,type: "POST"
+      ,data: {
+        "merchant_uid": "{결제건의 주문번호}" // 예: ORD20180131-0000011
+        ,"cancel_request_amount": 2000 // 환불금액
+        ,"reason": "테스트 결제 환불" // 환불사유
+        // [가상계좌 환불시 필수입력] 환불 수령계좌 예금주
+        ,"refund_holder": "홍길동" 
+        // [가상계좌 환불시 필수입력] 환불 수령계좌 은행코드(예: KG이니시스의 경우 신한은행은 88번)
+        ,"refund_bank": "88" 
+        // [가상계좌 환불시 필수입력] 환불 수령계좌 번호
+        ,"refund_account": "56211105948400" 
+      }
+    });
+  }
+	
+	 STEP 02. 결제정보 조회하기
+	 아래와 같이 결제정보를 저장하는 **Payments**라는 테이블을 생성했다고 가정합니다.
 
+	 server-side
+	 Copy
+	 /* ... model/payments.js ... */
+	   var mongoose = require('mongoose');
+	   var Schema = mongoose.Schema;
+	   ...
+	   var PaymentsSchema = new Schema({
+	     imp_uid: String, // 포트원 `unique key`(환불 요청시 `unique key`로 사용)
+	     merchant_uid: String, // 주문번호(결제정보 조회시 사용)
+	     amount: { type: Number, default: 0 }, // 결제 금액(환불 가능 금액 계산시 사용)
+	     // 환불 된 총 금액(환불 가능 금액 계산시 사용)
+	     cancel_amount: { type: Number, default: 0 }, 
+	     ...
+	   });
+	   ...
+	   module.exports = mongoose.model('Payments', PaymentsSchema);
+	 클라이언트에서 받은 주문번호(merchant_uid)를 사용해서 해당 주문의 결제정보를 Payments 테이블에서 조회합니다.
+
+	 server-side
+	 Copy
+	 /* ... 중략 ... */
+	   var Payments = require('./models/payments');
+	   app.post('/payments/cancel', async (req, res, next) => {
+	     try {
+	       /* 액세스 토큰(access token) 발급 */
+	       /* ... 중략 ... */
+	       /* 결제정보 조회 */
+	       const { body } = req;
+	       const { merchant_uid } = body; // 클라이언트로부터 전달받은 주문번호
+	       Payments.find({ merchant_uid }, async function(err, payment) { 
+	         if (err) {
+	           return res.json(err);
+	         }
+	         const paymentData = payment[0]; // 조회된 결제정보
+	         /* 포트원 REST API로 결제환불 요청 */
+	         ...
+	       });
+	     } catch (error) {
+	       res.status(400).send(error);
+	     }
+	   });
+	 STEP 03. 아임포트 서버에 취소 요청하기
+	 취소 요청을 하기 위해서 먼저 REST API access token 을 발급받습니다. 발급받은 액세스 토큰(access token)을 이용하여 아임포트 취소 API 를 호출하여 결제 취소를 요청합니다.
+
+	 휴대폰 소액결제 환불 시 유의사항
+
+	 결제가 이루어진 월과 환불을 요청하는 월이 다를 경우, 전액환불도 불가능합니다. 예를 들어, 1월 31일 결제건은 2월 1일에 환불할 수 없습니다.
+	
+	</script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </html>
