--- a/src/main/resources/templates/account/userInfo-edit.html
+++ b/src/main/resources/templates/account/userInfo-edit.html
@@ -395,6 +395,7 @@
 			*/
 			
 			// 비밀번호 유효성 검사
+			/*
 			if(password === ""){
 				alert("패스워드를 입력해주세요");
 				return;
@@ -405,6 +406,16 @@
 				return;
 			}
 			// 비밀번호가 변경안되는 경우도 있다... 
+			*/
+			
+			// 패스워드 입력 여부 확인
+			if (password && password !== passwordConfirm) {
+			    $("#notsamePw").removeClass("d-none");
+			    return;
+			}
+			
+			// 패스워드를 입력하지 않았다면 기존 패스워드를 그대로 사용하도록 처리
+			
 			
 			$.ajax({
 
