--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -138,6 +138,10 @@
 		//페이지네이션
 		// start가 한 페이지에 시작되는 리스트의 갯수 번호가 아니라 페이지 번호임!!!!!!!이걸 수정해서 다시 만들어야함... .ㅠ..ㅠ.ㅠ.ㅠ.ㅠ.ㅠ.ㅠ.ㅠ. 
 		
+		// 위임방식 ★ 
+//			$(부모요소).on("이벤트명", "자식선택자", function(){}); --동작
+
+
 		const totalResults = parseInt($("#totalResults").text()) || 0;
 		let maxResults = parseInt($("#maxResultSel").val())|| 10;
 		
@@ -145,8 +149,6 @@
 //		let offset = (start - 1) * maxResults + 1; // 검색 결과에서 시작하는 항목 번호
 
 
-
-		
 		function getTotalPageCount(){  // 총 페이지 수 
 			return Math.ceil(totalResults / maxResults);
 		}
@@ -262,6 +264,7 @@
 			});
 
 		    // 이전/다음 버튼 동작
+/*
 			$("#allPrevBtn").on("click", function() {
 			    if (start > 1) {
 			    	start = Math.max(1, start - 10);
@@ -292,7 +295,39 @@
 		            updateUrl();
 		        }
 		    });
+*/
+			$(".numberWrapper").on("click", "#prevBtn", function () {
+			    if (start > 1) {
+			        start--;
+			        setPageButtons();
+			        updateUrl();
+			    }
+			});
 			
+			$(".numberWrapper").on("click", "#nextBtn", function () {
+			    if (start < getTotalPageCount()) {
+			        start++;
+			        setPageButtons();
+			        updateUrl();
+			    }
+			});
+			
+			$(".numberWrapper").on("click", "#allPrevBtn", function () {
+			    if (start > 1) {
+			        start = Math.max(1, start - 10);
+			        setPageButtons();
+			        updateUrl();
+			    }
+			});
+			
+			$(".numberWrapper").on("click", "#allNextBtn", function () {
+			    if (start < getTotalPageCount()) {
+			        start = Math.min(getTotalPageCount(), start + 10);
+			        setPageButtons();
+			        updateUrl();
+			    }
+			});
+
 
 			
    		 setPageButtons();
